--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -3,6 +3,9 @@
   <meta charset="UTF-8">
   <title>Page Title</title>
   
+  <img src="/assets/logo/logo-01.svg" alt="BunBun Logo">
+
+
   <body>
 
     <h1>I am the solution to HW1!</h1>
