--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -5,8 +5,8 @@
 
 
   <body>
-    <img src="/assets/products/apple-cinnamon-roll.jpg" alt="BunBun Logo">
-
+  
+    <img src="/assets/logo/logo-01.svg" alt="BunBun Logo">
     <h1>I am the solution to HW1!</h1>
 
     <p>
