--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -6,7 +6,7 @@
 
   <body>
   
-    <img src="assets/logo/logo-01.svg" alt="BunBun Logo">
+    <img src="assets/logo/logo-01.svg" width = "400" alt="BunBun Logo">
     <h1>I am the solution to HW1!</h1>
 
     <p>
