--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -5,9 +5,10 @@
 
 
   <body>
-  
-    <img src="assets/logo/logo-01.svg" width = "400" alt="BunBun Logo">
-    <h1>I am the solution to HW1!</h1>
+  <div class="logo">
+    <img src="assets/logo/logo-01.svg" alt="BunBun Logo">
+  </div>
+
 
     <p>
         And I can link to <a href="./otherpage.html">other pages.</a>
