--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -5,10 +5,10 @@
 
 
   <body>
-
-    <img src="assets/logo/logo-01.svg" alt="BunBun Logo">
   
-
+    <h1><img src="assets/logo/logo-01.svg" alt="BunBun Logo"></h1>
+ 
+    <h1>I am the solution to HW1!</h1>
 
     <p>
         And I can link to <a href="./otherpage.html">other pages.</a>
