--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -6,8 +6,8 @@
 
   <body>
   
-    <h1><img src="assets/logo/logo-01.svg" alt="BunBun Logo"></h1>
- 
+    <img src="assets/logo/logo-01.svg" alt="BunBun Logo">
+   
     <h1>I am the solution to HW1!</h1>
 
     <p>
