--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -7,7 +7,7 @@
   <body>
   
     <img src="assets/logo/logo-01.svg" alt="BunBun Logo">
-    <hr>
+    <div class="line"></div>
    
     <h1>I am the solution to HW1!</h1>
 
