--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -6,7 +6,7 @@
 
   <body>
   
-    <img src="assets/logo/logo-01.svg" alt="BunBun Logo">
+    <img src="assets/logo/logo-01.svg">
     <div class="line"></div>
    
     <h1>I am the solution to HW1!</h1>
