--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -15,6 +15,7 @@
 
     <p>
         And I can link to <a href="./otherpage.html">other pages.</a>
+        <img src="assets/products/gluten-free-cinnamon-roll.jpg" alt = "bunbunlogo">
     </p>
 
   </body>
