--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -7,7 +7,7 @@
   <body>
   
     <div class="logo">
-    <img src="assets/logo/logo-01.svg" alt = "bunbunlogo">
+    <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo">
     </div>
     <div class="line"></div>
    
@@ -15,8 +15,7 @@
 
     <p>
         And I can link to <a href="./otherpage.html">other pages.</a>
-        <img src="assets/products/gluten-free-cinnamon-roll.jpg" alt = "gluten-free-cinnamon-roll">
-    </p>
+        
 
   </body>
 </html>
