--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
   <meta charset="UTF-8">
   <title>Product Gallery</title>
-
-
+  <link rel="stylesheet" type="text/css" href="styles.css">
+  
   <body>
   
-    <div class="logo">
+   
     <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo">
-    </div>
-    <div class="line"></div>
+    
+
    
     <h1>I am the solution to HW1!</h1>
 
