--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -3,11 +3,12 @@
   <meta charset="UTF-8">
   <title>Product Gallery</title>
   <link rel="stylesheet" type="text/css" href="styles.css">
-  
+
   <body>
   
-   
-    <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo">
+    <div class="logo">
+    <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></div>
+    <div class="line"></div>
     
 
    
