--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -7,7 +7,7 @@
   <body>
   
     <div class="logo">
-    <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></div>
+    <img src="../assets/logo/logo-01.svg" width ="400" alt = "bunbunlogo"></div>
     <div class="line"></div>
     
 
