--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <meta charset="UTF-8">
   <title>Product Gallery</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="./style.css">
 
   <body>
   
     <div class="logo">
-    <img src="../assets/logo/logo-01.svg" width ="400" alt = "bunbunlogo"></div>
+    <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></div>
     <div class="line"></div>
     
 
