--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -4,15 +4,13 @@
   <title>Product Gallery</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 
-  <body>
-  
+  <header>
     <div class="logo">
     <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></div>
     <div class="line"></div>
-    
+  </header>
 
-   
-    <h1>I am the solution to HW1!</h1>
+  
 
     <p>
         And I can link to <a href="./otherpage.html">other pages.</a>
