--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -4,6 +4,7 @@
   <title>Product Gallery</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 
+  <body>
   <header>
     <div class="logo">
     <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></div>
