--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -10,6 +10,9 @@
     <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></div>
     <div class="line"></div>
   </header>
+
+  <h1>PRODUCTS</h1>
+  <h1>CART</h1>
     
 
   </body> 
