--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -11,8 +11,8 @@
     <div class="line"></div>
   </header>
 
-  <h1>Products</h1>
-  <h1>Cart</h1>
+  <p>Products</p>
+  <p>Cart</p>
     
 
   </body> 
