--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -11,8 +11,10 @@
     <div class="line"></div>
   </header>
 
-  <p>Products</p>
-  <p>Cart</p>
+  <ul>
+    <li><a href="solution-hw1/index.html">Products</a></li>
+    <li><a href="solution-hw1/cart.html">Cart</a></li>
+  </ul>
     
 
   </body> 
