--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -11,12 +11,13 @@
     <div class="line"></div>
   </header>
 
+  <main>
   <ul>
     <li><a href="solution-hw1/index.html">Products</a></li>
     <li><a href="solution-hw1/cart.html">Cart</a></li>
   </ul>
     
-
+  </main>
   </body> 
 
 </html>
