--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -12,10 +12,9 @@
   </header>
 
   <main>
-  <ul>
-    <li><a href="solution-hw1/index.html">Products</a></li>
-    <li><a href="solution-hw1/cart.html">Cart</a></li>
-  </ul>
+    <a href="solution-hw1/index.html">Products</a>
+    <a href="solution-hw1/cart.html">Cart</a>
+  
     
   </main>
   </body> 
