--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -4,6 +4,10 @@
   <title>Product Gallery</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 
+  <head>
+    <title>Product Gallery</title>
+  </head>
+
   <body>
   <header>
     <div class="logo">
