--- a/solution-hw1/productdetails.html
+++ b/solution-hw1/productdetails.html
@@ -4,6 +4,12 @@
   <title>Product Gallery</title>
   <link rel="stylesheet" type="text/css" href="./style.css">
 
+  
+  <head>
+    <title>Product Details</title>
+  </head>
+  
+  
   <body>
   <header>
     <div class="logo">
