--- a/solution-hw1/productdetails.html
+++ b/solution-hw1/productdetails.html
@@ -16,6 +16,14 @@
     <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></div>
     <div class="line"></div>
   </header>
+  
+  <main>
+    <div class="tabs">
+        <a href="solution-hw1/index.html">Products</a>
+        <a href="solution-hw1/cart.html">Cart</a>
+        </div>
+  </main>
+
   </body>
 
 </html>
