--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -17,8 +17,8 @@
 
   <main>
     <div class="tabs">
-    <a href="solution-hw1/index.html">Products</a>
-    <a href="solution-hw1/cart.html">Cart</a>
+    <a href="index.html">Products</a>
+    <a href="cart.html">Cart</a>
     </div>
     
     <p>Our hand-made cinnamon rolls</p>
