linked cart and product pages2

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -17,7 +17,7 @@
 
   <main>
     <div class="tabs">
-    <a href="solution-hw1/index.html">Products</a><br>
+    <a href="solution-hw1/index.html">Products</a>
     <a href="solution-hw1/cart.html">Cart</a>
     </div>
     
