--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -11,13 +11,15 @@
   <body>
   <header>
     <div class="logo">
-    <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></div>
+      <a href="index.html">
+      <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></a>
+    </div>
     <hr>
   </header>
 
   <main>
     <div class="tabs">
-    <a href="index.html">Products</a>
+    <a href="index.html">Products</a><br>
     <a href="cart.html">Cart</a>
     </div>
     
