--- a/solution-hw1/productdetails.html
+++ b/solution-hw1/productdetails.html
@@ -11,12 +11,14 @@
   
   
   <body>
-  <header>
-    <div class="logo">
-    <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></div>
-    <div class="line"></div>
-  </header>
-  
+    <header>
+      <div class="logo">
+        <a href="index.html">
+        <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></a>
+      </div>
+      <hr>
+    </header>
+
   <main>
     <div class="tabs">
         <a href="solution-hw1/index.html">Products</a>
