--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -9,11 +9,13 @@
   </head>
   
   <body>
-  <header>
-    <div class="logo">
-    <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></div>
-    <hr>
-  </header>
+    <header>
+      <div class="logo">
+        <a href="index.html">
+        <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></a>
+      </div>
+      <hr>
+    </header>
 
   <main>
     <div class="tabs">
