--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -12,7 +12,8 @@
     <header>
       <div class="logo">
         <a href="index.html">
-        <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo"></a>
+        <img src="../assets/logo/logo-01.svg" alt = "bunbunlogo">
+        </a>
       </div>
       <hr>
     </header>
