break line bt tabs

--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -20,7 +20,7 @@
 
   <main>
     <div class="tabs">
-    <a href="index.html">Products</a>
+    <a href="index.html">Products</a><br>
     <a href="cart.html">Cart</a>
     </div>
     
