--- a/solution-hw1/productdetails.html
+++ b/solution-hw1/productdetails.html
@@ -22,7 +22,7 @@
 
   <main>
     <div class="tabs">
-        <a href="solution-hw1/index.html">Products</a>
+        <a href="solution-hw1/index.html">Products</a><br>
         <a href="solution-hw1/cart.html">Cart</a>
         </div>
   </main>
