adjust product siz2

--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -27,17 +27,17 @@
     <p>Our hand-made cinnamon rolls</p>
 
 
-    <a href="productdetails.html">
-    <img src="../assets/products/original-cinnamon-roll.jpg" alt = "originalroll">
-    </a>
-  
-    <br>
+    <div class="products">
+            <a href="productdetails.html">
+            <img src="../assets/products/original-cinnamon-roll.jpg" alt = "originalroll">
+            </a>
+            <br>
+            <p1>Original Cinnamon Roll</p1><br>
+            <p>$2.49</p>
+    </div>          
 
-    <p1>Original Cinnamon Roll</p1><br>
-    <p>$2.49</p>
-
   
-    </div>
+
   </main>
   </body> 
 
