--- a/solution-hw1/cart.html
+++ b/solution-hw1/cart.html
@@ -20,11 +20,36 @@
 
   <main>
     <div class="tabs">
-    <a href="index.html">Products</a><br>
-    <a href="cart.html">Cart</a>
+      <a href="index.html" class="highlight-text">PRODUCTS</a><br>
+      <a href="cart.html" class="currentpage">CART</a>
     </div>
     
-    <p>Our hand-made cinnamon rolls</p>
+    <p>Shopping Cart</p>
+    <br>
+    <img src="../assets/products/original-cinnamon-roll.jpg" width="200" alt = "originalroll" class="border">
+    <br>
+    <p2>Remove</p2>
+    <p>Original Cinnamon Roll</p>
+    <p>Glazing: Keep Original</p>
+    <p>Pack Size: 1</p>
+    <p>$2.49</p>
+    <br>
+    <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="200" alt = "doublechoccy" class="border">
+    <br>
+    <p2>Remove</p2>
+    <p>Double Chocolate Cinnamon Roll</p>
+    <p>Glazing: Sugar Milk</p>
+    <p>Pack Size: 6</p>
+    <p>$27.45</p>
+    <br>
+
+    <div class="section-divider"></div>
+
+    <br>
+
+    <p>Total: $29.94</p>
+
+    <button class="checkout">Checkout</button>
 
   
     
