--- a/solution-hw1/index.html
+++ b/solution-hw1/index.html
@@ -20,23 +20,73 @@
 
   <main>
     <div class="tabs">
-      <a href="index.html">Products</a><br>
-      <a href="cart.html">Cart</a>
+      <a href="index.html" class="currentpage">PRODUCTS</a><br>
+      <a href="cart.html" class="highlight-text">CART</a>
     </div>
     
     <p>Our hand-made cinnamon rolls</p>
 
 
-    <div class="products">
-      <a href="productdetails.html">
-      <img src="../assets/products/original-cinnamon-roll.jpg" alt = "originalroll">
-      </a>
-      <p1>Original Cinnamon Roll</p1><br>
-      <p>$2.49</p>
-    </div>          
-
+      <div class="highlight-text2">
+        <a href="productdetails.html">
+        <img src="../assets/products/original-cinnamon-roll.jpg" width="400" height="400" alt = "originalroll" class="border">
+        </a><br>
+        <p1>Original Cinnamon Roll</p1>
+        <p>$2.49</p>
+      </div>
   
 
+      <div class="highlight-text2">
+          <a href="productdetails.html">
+          <img src="../assets/products/apple-cinnamon-roll.jpg" width="400" height="400" alt = "applecinnamon" class="border">
+          </a><br>
+          <p1>Apple Cinnamon Roll</p1>
+          <p>$3.49</p>
+      </div>
+
+      <div class="highlight-text2">
+        <div class="product-container">
+          <a href="productdetails.html" class = "border">
+          <img src="../assets/products/raisin-cinnamon-roll.jpg" width="400" height="400" alt = "raisinroll" class="border">
+          </a><br>
+          <p1>Raisin Cinnamon Roll</p1>
+          <p>$2.99</p>
+        </div>
+      </div>
+
+      <div class="highlight-text2">
+        <div class="product-container">
+          <a href="productdetails.html" class = "border">
+          <img src="../assets/products/walnut-cinnamon-roll.jpg" width="400" height="400" alt = "walnutroll" class="border">
+          </a><br>
+          <p1>Walnut Cinnamon Roll</p1>
+          <p>$3.49</p>
+        </div>
+      </div>
+
+      <div class="highlight-text2">
+        <div class="product-container">
+          <a href="productdetails.html" class = "border">
+            <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" width="400" height="400" alt = "doublechoccy" class="border">
+            </a><br>
+            <p1>Double Chocolate Cinnamon Roll</p1>
+            <p>$3.99</p>
+        </div>
+      </div>
+
+
+      <div class="highlight-text2">
+        <div class="product-container">
+          <a href="productdetails.html" class = "border">
+          <img src="../assets/products/strawberry-cinnamon-roll.jpg" width="400" alt = "strawroll" class="border">
+          </a><br>
+          <p1>Strawberry Cinnamon Roll</p1>
+          <p>$3.99</p>
+        </div>
+      </div>
+
+
+        
   </main>
   </body> 
 
