--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -38,11 +38,11 @@
                 </div>
                 <div class="grid-item">
                     <a href="productdetails.html">
-                        <img src="../assets/products/original-cinnamon-roll.jpg" alt = "originalroll" class="border">
+                        <img src="../assets/products/apple-cinnamon-roll.jpg" alt = "appleroll" class="border">
                         </a><br>
                         <a href="productdetails.html">
-                        <p1>Original Cinnamon Roll</p1></a>
-                        <p>$2.49</p>
+                        <p1>Apple Cinnamon Roll</p1></a>
+                        <p>$3.49</p>
                 </div>
                 <div class="grid-item">
                     <div class="product-container">
