--- a/solution-hw2/index.html
+++ b/solution-hw2/index.html
@@ -19,6 +19,7 @@
             <div class="tabs">
                 <span><a href="index.html" class="currentpage">PRODUCTS</a></span>
                 <span class="cart-link"><a href="cart.html" class="highlight-text">CART</a></span>
+                <span class="cart-icon">2</span>
             </div>
             <div class="slogan">
                 <p>Our hand-made cinnamon rolls</p>
