--- a/solution-hw3/cart.html
+++ b/solution-hw3/cart.html
@@ -5,7 +5,8 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 
   <head>
-  <title>Cart</title>
+    <script src="random-element.js"></script>
+    <title>Cart</title>
   </head>
 
   
