--- a/solution-hw3/index.html
+++ b/solution-hw3/index.html
@@ -5,7 +5,8 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 
   <head>
-  <title>Product Gallery</title>
+    <script src="random-element.js"></script>
+    <title>Product Gallery</title>
   </head>
   
     <body>
