--- a/solution-hw3/productdetails.html
+++ b/solution-hw3/productdetails.html
@@ -44,14 +44,13 @@
               <br>
               <p>Glazing:</p>
                 <label for="glazing">
-                    <div class="drop-down">
-                        <select name="glaze" id="glazingOptions"> 
-                            <option value="Keep original">Keep original</option> 
-                            <option value="Sugar milk">Sugar Milk</option> 
-                            <option value="Vanilla milk">Vanilla Milk</option> 
-                            <option value="Double chocolate">Double Chocolate</option> 
-                        </select>
-                    </div>
+                <select name="glaze" id="glazingOptions"> 
+                    <option value="Keep original">Keep original</option> 
+                    <option value="Sugar milk">Sugar Milk</option> 
+                    <option value="Vanilla milk">Vanilla Milk</option> 
+                    <option value="Double chocolate">Double Chocolate</option> 
+                </select>
+
                 </label>
         
               <p>Pack Size:</p>
@@ -71,8 +70,8 @@
               <br>
               <br>
               <br>
-              <span id="price">$2.49</span>
-              <span><button class="addtocart">Add To Cart</button></span>
+              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<span id="price">$2.49</span>&nbsp&nbsp&nbsp
+              <button class="addtocart">Add To Cart</button>
             </div>
         </div>
 
