--- a/solution-hw3/index.html
+++ b/solution-hw3/index.html
@@ -34,7 +34,7 @@
                     <a href="productdetails.html">
                         <img src="../assets/products/original-cinnamon-roll.jpg" alt = "originalroll" class="border">
                         </a><br>
-                        <a href="productdetails.html">
+                        <a data-roll = "Original" href="#">
                         <p1>Original Cinnamon Roll</p1></a>
                         <p>$2.49</p>
                 </div>
@@ -42,7 +42,7 @@
                     <a href="productdetails.html">
                         <img src="../assets/products/apple-cinnamon-roll.jpg" alt = "appleroll" class="border">
                         </a><br>
-                        <a href="productdetails.html">
+                        <a data-roll = "Apple" href = "#">
                         <p1>Apple Cinnamon Roll</p1></a>
                         <p>$3.49</p>
                 </div>
@@ -51,7 +51,7 @@
                         <a href="productdetails.html">
                         <img src="../assets/products/raisin-cinnamon-roll.jpg" alt = "raisinroll" class="border">
                         </a><br>
-                        <a href="productdetails.html">
+                        <a data-roll = "Raisin" href="#">
                         <p1>Raisin Cinnamon Roll</p1></a>
                         <p>$2.99</p>
                         </div>
@@ -61,7 +61,7 @@
                         <a href="productdetails.html">
                         <img src="../assets/products/walnut-cinnamon-roll.jpg" alt = "walnutroll" class="border">
                         </a><br>
-                        <a href="productdetails.html">
+                        <a data-roll = "Walnut" href="#">
                         <p1>Walnut Cinnamon Roll</p1></a>
                         <p>$3.49</p>
                         </div>
@@ -71,7 +71,7 @@
                         <a href="productdetails.html">
                             <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" alt = "doublechoccy" class="border">
                             </a><br>
-                            <a href="productdetails.html">
+                            <a data-roll = "Double-Chocolate" href="#">
                             <p1>Double Chocolate Cinnamon Roll</p1></a>
                             <p>$3.99</p>
                         </div>
@@ -81,7 +81,7 @@
                         <a href="productdetails.html">
                         <img src="../assets/products/strawberry-cinnamon-roll.jpg" alt = "strawroll" class="border">
                         </a><br>
-                        <a href="productdetails.html">
+                        <a data-roll = "Strawberry" href="#">
                         <p1>Strawberry Cinnamon Roll</p1></a>
                         <p>$3.99</p>
                         </div>
@@ -89,6 +89,9 @@
         </div>
             
       </main>
+
+      <script src="./js/rollsData.js"></script>
+
     </body> 
 
 </html>
