--- a/solution-hw3/index.html
+++ b/solution-hw3/index.html
@@ -5,7 +5,6 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
 
   <head>
-    <script src="random-element.js"></script>
     <title>Product Gallery</title>
   </head>
   
@@ -31,60 +30,46 @@
 
         <div class="grid-container">
                 <div class="grid-item">
-                    <a href="productdetails.html">
+                    <a href="productdetails.html?roll=Original">
                         <img src="../assets/products/original-cinnamon-roll.jpg" alt = "originalroll" class="border">
                         </a><br>
-                        <a data-roll = "Original" href="#">
                         <p1>Original Cinnamon Roll</p1></a>
                         <p>$2.49</p>
                 </div>
                 <div class="grid-item">
-                    <a href="productdetails.html">
+                    <a href="productdetails.html?roll=Apple">
                         <img src="../assets/products/apple-cinnamon-roll.jpg" alt = "appleroll" class="border">
                         </a><br>
-                        <a data-roll = "Apple" href = "#">
-                        <p1>Apple Cinnamon Roll</p1></a>
+                        <p1>Apple Cinnamon Roll</p1>
                         <p>$3.49</p>
                 </div>
                 <div class="grid-item">
-                    <div class="product-container">
-                        <a href="productdetails.html">
+                    <a href="productdetails.html?roll=Raisin">
                         <img src="../assets/products/raisin-cinnamon-roll.jpg" alt = "raisinroll" class="border">
                         </a><br>
-                        <a data-roll = "Raisin" href="#">
-                        <p1>Raisin Cinnamon Roll</p1></a>
+                        <p1>Raisin Cinnamon Roll</p1>
                         <p>$2.99</p>
-                        </div>
                 </div>
                 <div class="grid-item">
-                    <div class="product-container">
-                        <a href="productdetails.html">
+                    <a href="productdetails.html?roll=Walnut">
                         <img src="../assets/products/walnut-cinnamon-roll.jpg" alt = "walnutroll" class="border">
                         </a><br>
-                        <a data-roll = "Walnut" href="#">
-                        <p1>Walnut Cinnamon Roll</p1></a>
+                        <p1>Walnut Cinnamon Roll</p1>
                         <p>$3.49</p>
-                        </div>
                 </div>
                 <div class="grid-item">
-                    <div class="product-container">
-                        <a href="productdetails.html">
+                    <a href="productdetails.html?roll=Double-Chocolate">
                             <img src="../assets/products/double-chocolate-cinnamon-roll.jpg" alt = "doublechoccy" class="border">
                             </a><br>
-                            <a data-roll = "Double-Chocolate" href="#">
-                            <p1>Double Chocolate Cinnamon Roll</p1></a>
+                            <p1>Double Chocolate Cinnamon Roll</p1>
                             <p>$3.99</p>
-                        </div>
                 </div>
                 <div class="grid-item">
-                    <div class="product-container">
-                        <a href="productdetails.html">
+                    <a href="productdetails.html?roll=Strawberry">
                         <img src="../assets/products/strawberry-cinnamon-roll.jpg" alt = "strawroll" class="border">
                         </a><br>
-                        <a data-roll = "Strawberry" href="#">
-                        <p1>Strawberry Cinnamon Roll</p1></a>
+                        <p1>Strawberry Cinnamon Roll</p1>
                         <p>$3.99</p>
-                        </div>
                 </div>
         </div>
             
