--- a/solution-hw3/productdetails.html
+++ b/solution-hw3/productdetails.html
@@ -32,9 +32,10 @@
     
         <div class="grid-container2">
             <div class="wide-column">
-              <div class="product-detail">
-                <img src="../assets/products/original-cinnamon-roll.jpg" alt = "originalroll" class="border">
-              </div>
+              <div id="product-details">
+                <div id="roll-heading"></div>
+                <img id="product-image" src=" " alt="Cinnamon Roll" class="border">
+            </div>
             </div>
             <div class="narrow-column">
               <p>Customize our delicious, hand-made cinnamon rolls to your liking!</p><br/>
@@ -70,7 +71,7 @@
               <br>
               <br>
               <br>
-              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<span id="price">$2.49</span>&nbsp&nbsp&nbsp
+              &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<span id="total-price">$2.49</span>&nbsp&nbsp&nbsp
               <button class="addtocart">Add To Cart</button>
             </div>
         </div>
@@ -78,8 +79,9 @@
       </main>
 
 
+      <script src="./js/rollsData.js"></script>
       <script src="./js/random-element.js"></script>
 
     </body>
 
-</html>
+</html>  
