--- a/solution-hw3/index.html
+++ b/solution-hw3/index.html
@@ -75,7 +75,7 @@
             
       </main>
 
-      <script src="./js/rollsData.js"></script>
+      <script src="./js/random-element.js"></script>
 
     </body> 
 
