--- a/solution-hw3/productdetails.html
+++ b/solution-hw3/productdetails.html
@@ -34,7 +34,7 @@
             <div class="wide-column">
               <div id="product-details">
                 <div id="roll-heading"></div>
-                <img id="product-image" src=" " alt="Cinnamon Roll" class="border">
+                <img id="product-image" src="../assets/products/original-cinnamon-roll.jpg" alt="Cinnamon Roll" class="border">
             </div>
             </div>
             <div class="narrow-column">
@@ -79,7 +79,6 @@
       </main>
 
 
-      <script src="./js/rollsData.js"></script>
       <script src="./js/random-element.js"></script>
 
     </body>
