--- a/solution-hw6/productdetails.html
+++ b/solution-hw6/productdetails.html
@@ -79,8 +79,7 @@
       </main>
 
 
-      <script src="./js/rollsData.js"></script>
-      <script src="./js/random-element.js"></script>
+      <script src="./js/productdetails.js"></script>
 
     </body>
 
