--- a/solution-hw6/cart.html
+++ b/solution-hw6/cart.html
@@ -20,7 +20,7 @@
           <div class="tabs">
               <span><a href="index.html" class="highlight-text">PRODUCTS</a></span>
               <span class="cart-link"><a href="cart.html" class="currentpage">CART</a></span>
-              <span class="cart-icon">2</span>
+              <span class="cart-icon">0</span>
           </div>
           <div class="slogan">
               <p>Our hand-made cinnamon rolls</p>
@@ -42,7 +42,7 @@
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span id="total"></span></p>
+            &nbsp;&nbsp;&nbsp;&nbsp;<span id="total"></span></p>
         </div>
 
         <div class="button">
@@ -52,7 +52,8 @@
         
     </main>
 
-    <script src="./js/cart.js"></script>
+    <script src="./js/cart.js" defer></script>
+    <script src="./js/productdetails.js" defer></script>
 
   </body> 
 
