--- a/solution-hw6/index.html
+++ b/solution-hw6/index.html
@@ -19,7 +19,7 @@
             <div class="tabs">
                 <span><a href="index.html" class="currentpage">PRODUCTS</a></span>
                 <span class="cart-link"><a href="cart.html" class="highlight-text">CART</a></span>
-                <span class="cart-icon">2</span>
+                <span class="cart-icon">0</span>
             </div>
             <div class="slogan">
                 <p>Our hand-made cinnamon rolls</p>
@@ -33,7 +33,7 @@
                     <a href="productdetails.html?roll=Original">
                         <img src="../assets/products/original-cinnamon-roll.jpg" alt = "originalroll" class="border">
                         </a><br>
-                        <p1>Original Cinnamon Roll</p1></a>
+                        <p1>Original Cinnamon Roll</p1>
                         <p>$2.49</p>
                 </div>
                 <div class="grid-item">
@@ -74,6 +74,10 @@
         </div>
             
       </main>
+
+      <script src="./js/cart.js" defer></script>
+      <script src="./js/productdetails.js" defer></script>
+
 
     </body> 
 
