--- a/solution-hw6/productdetails.html
+++ b/solution-hw6/productdetails.html
@@ -21,7 +21,7 @@
         <div class="tabs">
             <span><a href="index.html" class="currentpage">PRODUCTS</a></span>
             <span class="cart-link"><a href="cart.html" class="highlight-text">CART</a></span>
-            <span class="cart-icon">2</span>
+            <span class="cart-icon">0</span>
         </div>
         <div class="slogan">
             <p>Our hand-made cinnamon rolls</p>
@@ -79,7 +79,9 @@
       </main>
 
 
-      <script src="./js/productdetails.js"></script>
+      <script src="./js/productdetails.js" defer></script>
+      <script src="./js/cart.js" defer></script>
+
 
     </body>
 
