--- a/solution-hw6/productdetails.html
+++ b/solution-hw6/productdetails.html
@@ -80,7 +80,8 @@
 
 
       <script src="./js/productdetails.js" defer></script>
-      <script src="./js/cart.js" defer></script>
+      <script src="./js/cart.js" defer
+      ></script>
 
 
     </body>
