--- a/final-project/home.html
+++ b/final-project/home.html
@@ -28,7 +28,7 @@
 
       <main>
         <div class="TaskInputQuestion">
-            <p>What tasks do you have to complete today?</p>
+            <p1>What tasks do you have to complete today?</p1>
         </div>
 
         <div id="textBoxContainer">
