--- a/final-project/home.html
+++ b/final-project/home.html
@@ -8,6 +8,7 @@
 
   <head>
   <title>Product Gallery</title>
+  <link rel="icon" href="media/tomatologo.png" type="icon">
   </head>
   
     <body>
