--- a/final-project/tasktime.html
+++ b/final-project/tasktime.html
@@ -11,6 +11,7 @@
 
   <head>
   <title>Product Gallery</title>
+  <link rel="icon" href="media/tomatologo.png" type="icon">
   </head>
   
     <body>
@@ -31,7 +32,7 @@
 
       <main>
         <div class="TaskInputQuestion">
-            <p>Here is your to-do list!</p>
+            <p1>Here is your to-do list!</p1>
         </div>
         
 
