--- a/final-project/timer.html
+++ b/final-project/timer.html
@@ -9,6 +9,7 @@
   <head>
   <title>Product Gallery</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <link rel="icon" href="media/tomatologo.png" type="icon">
   </head>
   
     <body>
@@ -36,9 +37,9 @@
                 was born. This method is completely customizable!
               </p>
               <div class="tomatoBook">
-                <img src="images/pomodorotechnique.jpg" alt="Pomodoro Technique">
+                <img src="media/pomodorotechnique.jpg" alt="Pomodoro Technique">
                 <div class="bookArrow">
-                  <img src="images/redarrow.png" alt="Red Arrow">
+                  <img src="media/redarrow.png" alt="Red Arrow">
                   <p>Check out this book if you're interested!</p>
                 </div>
               </div>
@@ -53,6 +54,7 @@
               <button id="shortBreak">Short Break</button>
             </div>
             <div class="timer" id="timer">25:00</div>
+            <audio id="notificationSound" src="media/timersound.mp3"></audio>
             <div class="timerButtons">
               <button id="start">Start</button>
               &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
