--- a/final-project/tasktime.html
+++ b/final-project/tasktime.html
@@ -17,6 +17,7 @@
     <body>
       <header>
         <div class="Header">
+            <img src="media/tomatologo.png" id="tomatologo">
             <a href="home.html">Pomotodo</a>
         </div>
 
@@ -31,12 +32,16 @@
       </header>
 
       <main>
-        <div class="TaskInputQuestion">
-            <p1>Here is your to-do list!</p1>
-        </div>
-        
 
-        <div id="textBoxInputs"></div>
+        <div class="taskTimeContainer">
+          <div class="TaskInputQuestion">
+              <p1>Here is your to-do list!</p1>
+              <div id="textBoxInputs"></div>
+          </div>
+
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/4xDzrJKXOOY?si=etJnSpzBN6rSifZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+
       </main>
       <script src="script.js"></script>
     </body>
