--- a/final-project/home.html
+++ b/final-project/home.html
@@ -13,7 +13,8 @@
   
     <body>
       <header>
-         <div class="Header">
+        <div class="Header">
+            <img src="media/tomatologo.png" id="tomatologo">
             <a href="home.html">Pomotodo</a>
         </div>
 
