--- a/final-project/tasktime.html
+++ b/final-project/tasktime.html
@@ -39,7 +39,13 @@
               <div id="textBoxInputs"></div>
           </div>
 
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/4xDzrJKXOOY?si=etJnSpzBN6rSifZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+         
+
+          <div id="videoContainer">
+            <p>Here are some of my favorite study livestreams on YouTube!</p>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/4xDzrJKXOOY?si=etJnSpzBN6rSifZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
+          
         </div>
 
       </main>
