--- a/final-project/timer.html
+++ b/final-project/timer.html
@@ -14,8 +14,9 @@
   
     <body>
       <header>
-         <div class="Header">
-            <a href="home.html">Pomotodo</a>
+        <div class="Header">
+          <img src="media/tomatologo.png" id="tomatologo">
+          <a href="home.html">Pomotodo</a>
         </div>
 
         <div class="NavBar">
