--- a/final-project/tasktime.html
+++ b/final-project/tasktime.html
@@ -42,10 +42,14 @@
          
 
           <div id="videoContainer">
-            <p>Here are some of my favorite study livestreams on YouTube!</p>
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/4xDzrJKXOOY?si=etJnSpzBN6rSifZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p>Here are some of my favorite study/chill music livestreams on YouTube!</p>
           </div>
-          
+
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/4xDzrJKXOOY?si=etJnSpzBN6rSifZU" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <br>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/Jdu9RQSfI4k?si=RAMqFNZ3lOK0JpE-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          <br>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/lTRiuFIWV54?si=LSj1y4jNkJ2oaTZF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
 
       </main>
