--- a/final-project/timer.html
+++ b/final-project/timer.html
@@ -35,7 +35,14 @@
             <div class="textContainer">
               <p>The Pomodoro method was developed in the late 1980s by university student Francesco Cirillo. He was
                 struggling to complete his studying and assignments and decided to break down his work into smaller chunks. Thus, the pomodoro method
-                was born. This method is completely customizable!
+                was born. &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+                 This method is completely customizable! However, if you're stuck, you can try my method. Start with the "Work Time" timer, 
+                then the "Short Break" timer and repeat 3x. You can then use the "Long Break" timer and repeat the whole cycle until you finish your work!
               </p>
               <div class="tomatoBook">
                 <img src="media/pomodorotechnique.jpg" alt="Pomodoro Technique">
