--- a/final-project/tasktime.html
+++ b/final-project/tasktime.html
@@ -12,6 +12,7 @@
   <head>
   <title>Product Gallery</title>
   <link rel="icon" href="media/tomatologo.png" type="icon">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   </head>
   
     <body>
