--- a/final-project/timer.html
+++ b/final-project/timer.html
@@ -10,6 +10,7 @@
   <title>Product Gallery</title>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link rel="icon" href="media/tomatologo.png" type="icon">
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   </head>
   
     <body>
