--- a/final-project/tasktime.html
+++ b/final-project/tasktime.html
@@ -13,6 +13,7 @@
   <title>Product Gallery</title>
   <link rel="icon" href="media/tomatologo.png" type="icon">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   
     <body>
