--- a/final-project/home.html
+++ b/final-project/home.html
@@ -16,7 +16,7 @@
     <body>
       <header>
         <div class="Header">
-            <img src="media/tomatologo.png" id="tomatologo">
+            <img src="media/tomatologo.png" id="tomatologo" alt ="tomato logo">
             <a href="home.html">Pomotodo</a>
         </div>
 
@@ -37,19 +37,19 @@
 
         <div id="textBoxContainer">
             <div class="TaskInput">
-                <textarea id="user-input" placeholder="  Ex. finish coding this website..."></textarea>
+                <textarea id="user-input" placeholder="  Ex. finish coding this website..." label="text box 1"></textarea>
             </div>
 
             <div class="empty-line"></div>
 
             <div class="TaskInput">
-                <textarea id="user-input1" placeholder=""></textarea>
+                <textarea id="user-input1" placeholder="" label="text box 2"></textarea>
             </div>
 
             <div class="empty-line"></div>
 
             <div class="TaskInput">
-                <textarea id="user-input2" placeholder=""></textarea>
+                <textarea id="user-input2" placeholder="" label="text box 3"></textarea>
             </div>
         </div>
         
