--- a/final-project/home.html
+++ b/final-project/home.html
@@ -17,7 +17,7 @@
       <header>
         <div class="Header">
             <img src="media/tomatologo.png" id="tomatologo" alt ="tomato logo">
-            <a href="home.html">Pomotodo</a>
+            <a href="home.html" alt ="logo name">Pomotodo</a>
         </div>
 
         <div class="NavBar">
