--- a/final-project/timer.html
+++ b/final-project/timer.html
@@ -18,7 +18,7 @@
       <header>
         <div class="Header">
           <img src="media/tomatologo.png" id="tomatologo">
-          <a href="home.html">Pomotodo</a>
+          <a href="home.html" alt ="logo name">Pomotodo</a>
         </div>
 
         <div class="NavBar">
