--- a/final-project/tasktime.html
+++ b/final-project/tasktime.html
@@ -14,6 +14,7 @@
   <link rel="icon" href="media/tomatologo.png" type="icon">
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   </head>
   
     <body>
